# fence

./: .gitignore
backend/: Cargo.toml  build.rs
backend-lib/: BuildAndCopy.sh  Cargo.toml  fence-backend-lib.h
backend-lib/src/: lib.rs
backend/src/: config.rs  cursor.rs  display.rs  grpc.rs  lib.rs  region.rs  tests.rs
backend/tests/: config.rs
frontend/: .gitignore  .prettierrc.json  app.vue  nuxt.config.ts  package.json  tailwind.config.js
frontend/assets/css/: globals.scss
frontend/components/: DisplayCanvas.vue  EventHandler.tsx  EventHandler.vue  Layout.tsx
frontend/components/connection/: ConnectionStatusBar.tsx  ConnectionStatusBar.vue  NewConnection.tsx  PreviousConnections.tsx
frontend/components/displays/: DisplaysCanvas.tsx
frontend/lib/: api.ts  commands.ts  connection-helper.ts  displays-helper.ts  events.ts  store.ts  tauri.ts
frontend/lib/state/: connection.ts  displays.ts  state.ts
frontend/lib/types/: cursor.ts  displays.ts  events.ts  fence-state.ts  grpc-status.ts  regions.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  index.vue
frontend/pages/hostname/: [hostname].tsx  [hostname].vue
frontend/plugins/: fontawesome.ts
frontend/src/: app.scss
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: events.rs  grpc.rs  main.rs  state.rs
frontend/src-tauri/src/commands/: displays.rs  mod.rs  regions.rs
frontend/src/components/connection/: ConnectionStatusBar.svelte  NewConnection.svelte  PreviousConnections.svelte
frontend/src/components/displays/: DisplaysCanvas.svelte
frontend/src/lib/: store.ts
frontend/src/lib/types/: displays.ts  grpc-status.ts  regions.ts  state.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/hostname/[hostname]/: +layout.svelte  +page.svelte
frontend/styles/: globals.scss
protos/: fence.proto
sys/macos/Frameworks/: fence-backend-lib.h
sys/macos/macos/: ContentView.swift  macos-Bridging-Header.h  macosApp.swift
sys/macos/macos.xcodeproj/: project.pbxproj
sys/macos/macos.xcodeproj/xcshareddata/xcschemes/: macos.xcscheme
sys/windows/: Cargo.toml
sys/windows/src/: main.rs  windows_cursor.rs
