[package]
name = "backend-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "fence_backend"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
