[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
directories = "5.0.0"
once_cell = "1.17.1"
prost = "0.11.8"
screenshots = "0.5.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["fs", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.12"
tonic = "0.9.1"

[build-dependencies]
tonic-build = "0.8.3"
