[package]
name = "windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../../backend" }
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.windows]
version = "0.48.0"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_Graphics_Gdi"
]
